[package]
name = "dreamluau"
version = "0.2.1"
authors = ["Y0SH1M4S73R <legoboyo@earthlink.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
meowtonin = { version = "0.3.1", features = ["fast-typechecking"] }
mlua = { version = "0.9.5", features = ["luau", "unstable"] }
thiserror = { version = "*" }
constcat = { version = "*" }
dreamluau_proc_macro = { path = "./proc_macro" }

[dev-dependencies]
glob = { version = "*" }
portpicker = { version = "*" }
test-cdylib = { version = "*" }
